# jobservitor

./: PROJECT.md  Taskfile.yml  hello.py  pyproject.toml
app/: conftest.py  executor.py  models.py  persistence.py  scheduler.py  test_executor.py  test_scheduler.py
tests/: conftest.py  test_executor.py  test_scheduler.py
