[project]
name = "jobservitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "docker>=7.1.0",
    "fastapi[standard]>=0.118.0",
    "pdbpp>=0.11.7",
    "psutil>=7.1.2",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "redis>=6.4.0",
    "ruff>=0.13.2",
]
